# pet-companion

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_initial.sql
backend/src/: config.rs  db.rs  errors.rs  main.rs
backend/src/handlers/: auth.rs  medical_records.rs  mod.rs  pets.rs  shops.rs  upload.rs  wellbeing_notes.rs
backend/src/middleware/: auth.rs
backend/src/models/: medical_record.rs  mod.rs  pet.rs  shop.rs  user.rs  wellbeing_note.rs
backend/src/routes/: mod.rs
frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/api/: auth.ts  client.ts  notes.ts  pets.ts  records.ts  shops.ts
frontend/src/components/: Layout.tsx  Modal.tsx  Navbar.tsx  PetCard.tsx  RecordCard.tsx  Sidebar.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  PetDetail.tsx  Pets.tsx  Register.tsx  ShopDetail.tsx  ShopManager.tsx  Shops.tsx  VetPatient.tsx  VetPortal.tsx
frontend/src/stores/: auth.ts
frontend/src/types/: index.ts
