[package]
name = "pet-companion-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pet-companion-api"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-multipart = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.15"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
futures = "0.3"
mime = "0.3"
bytes = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
anyhow = "1"
futures-util = "0.3"
actix-files = "0.6"
sanitize-filename = "0.5"
